--- a/app/views/bike_hires/_form.html.haml
+++ b/app/views/bike_hires/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @bike_hire do |f|
+= form_for @bike_hire, multipart: true do |f|
   - if @bike_hire.errors.any?
     #error_explanation
       %h2= "#{pluralize(@bike_hire.errors.count, "error")} prohibited this bike_hire from being saved:"
@@ -17,6 +17,6 @@
     = f.text_area :manufacturer
   .field
     = f.label :image
-    = f.text_field :image
+    = f.file_field :image
   .actions
     = f.submit 'Save'
